<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.faranjit.feedbacklist.ui.detail.presentation.DetailViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/Theme.FeedbackList.AppBarOverlay">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
                app:toolbarId="@+id/toolbar">

                <fragment
                    android:id="@+id/feedback_map"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:apiKey="@string/google_maps_key"
                    app:layout_collapseMode="parallax" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="#33000000"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/Theme.FeedbackList.PopupOverlay" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/activity_horizontal_margin">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lbl_browser_info"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/browser_info"
                    android:textColor="@android:color/background_dark"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lbl_browser_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/browser_app_name"
                    android:textColor="@android:color/background_dark"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lbl_browser_info" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:text="@{viewModel.feedbackObservable.browser.appCodeName}"
                    android:textColor="@android:color/background_dark"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/lbl_browser_name"
                    app:layout_constraintTop_toBottomOf="@id/lbl_browser_info"
                    tools:text="asf" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lbl_browser_platform"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:text="@string/platform"
                    android:textColor="@android:color/background_dark"
                    app:layout_constraintEnd_toStartOf="@id/txt_browser_platform"
                    app:layout_constraintTop_toBottomOf="@id/lbl_browser_info" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_browser_platform"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@{viewModel.feedbackObservable.browser.platform}"
                    android:textColor="@android:color/background_dark"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lbl_browser_info"
                    tools:text="asf" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lbl_browser_version"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/app_version"
                    android:textColor="@android:color/background_dark"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lbl_browser_name" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_browser_version"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:text="@{viewModel.feedbackObservable.browser.appVersion}"
                    android:textColor="@android:color/background_dark"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/lbl_browser_version"
                    app:layout_constraintTop_toBottomOf="@id/lbl_browser_name"
                    tools:text="asf" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lbl_labels"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/labels"
                    android:textColor="@android:color/background_dark"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txt_browser_version" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_labels"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:text="@{viewModel.labelsObservable}"
                    android:textColor="@android:color/background_dark"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/lbl_labels"
                    app:layout_constraintTop_toTopOf="@id/lbl_labels"
                    tools:text="asf" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lbl_rating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:text="@string/rating_label"
                    android:textColor="@android:color/background_dark"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/txt_rating"
                    app:layout_constraintTop_toBottomOf="@id/txt_browser_version" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_rating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{Double.toString(viewModel.feedbackObservable.rating)}"
                    android:textColor="@android:color/background_dark"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/lbl_labels"
                    tools:text="asf" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lbl_comment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/comment"
                    android:textColor="@android:color/background_dark"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lbl_labels" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_comment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@{viewModel.feedback.comment}"
                    android:textColor="@android:color/background_dark"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lbl_comment"
                    tools:text="asf" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_html"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:background="@drawable/rounded_button"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/display_as_html"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txt_comment"
                    app:visibility="@{viewModel.feedback.html}" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>